--- a/app/strategies/break_out/config.yaml
+++ b/app/strategies/break_out/config.yaml
@@ -1,6 +1,6 @@
 name: BreakOut
 display_name: Range breakout 1.0
-enabled: true
+enabled: false
 total_strategy_capital: 100000
 positioning: risk
 holiday_calendar: us
