--- a/app/strategies/turnover_tuesday/config.yaml
+++ b/app/strategies/turnover_tuesday/config.yaml
@@ -1,6 +1,6 @@
 name: TurnoverTuesday
 display_name: Turnover Tuesday 1.0
-enabled: true
+enabled: false
 total_strategy_capital: 100000
 positioning: capital
 holiday_calendar: us
