--- a/app/strategies/crypto/config.yaml
+++ b/app/strategies/crypto/config.yaml
@@ -1,6 +1,6 @@
 name: Crypto
 display_name: Crypto 1.3
-enabled: false
+enabled: true
 total_strategy_capital: 100000
 positioning: risk
 holiday_calendar: us
@@ -20,8 +20,8 @@ market_hours:
       open_time: "00:00"
       close_time: "00:00"
     Friday:
-      open_time: "00:00"
-      close_time: "00:00"
+      open_time: "01:05"
+      close_time: "23:55"
     Saturday:
       open_time: "01:05"
       close_time: "23:55"
@@ -36,6 +36,7 @@ assets:
     range_open_min: 425
     range_close_min: 665
     range_stop_loss: false
+    range_size_restricted: true
     risk_percent: 1.0
     reward_risk_ratio: 2
     max_total_trades: 30
@@ -50,6 +51,7 @@ assets:
     range_open_min: 425
     range_close_min: 665
     range_stop_loss: false
+    range_size_restricted: true
     risk_percent: 1.0
     reward_risk_ratio: 2
     max_total_trades: 30
@@ -64,6 +66,7 @@ assets:
     range_open_min: 425
     range_close_min: 665
     range_stop_loss: false
+    range_size_restricted: true
     risk_percent: 1.0
     reward_risk_ratio: 2
     max_total_trades: 400
